--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>Gas Dispersion</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <link rel="stylesheet" href="/media/joanna/Linux/Studia/Magisterka/Server/web/node_modules/leaflet/dist/leaflet.css">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></link>
-    
+    <link rel="stylesheet" href="./css/leaflet.css">    
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
 </head>
 
 <body>
